# jobRadarAI

./: .gitignore  README.md
backend/: .env.example  config.py  database.py  deps.py  diagnose_matching.py  main.py  pyproject.toml  requirements.txt  test_filters.py  test_rag.py  test_rating_gaps.py  test_text_cleanup.py
backend/core/: rate_limit.py  security.py
backend/models/: user.py
backend/routes/: admin.py  auth.py  crawler.py  cv.py  jobs.py  users.py
backend/scripts/: diagnose_matching.py
backend/services/: adzuna_crawler.py  ai_models.py  ai_usage.py  apply_pack.py  calibration.py  crawler.py  cv_latex_boilerplate.py  cv_parser.py  email.py  jd_text.py  job_dedup.py  job_reminders.py  jobsapi_indeed_crawler.py  jooble_crawler.py  limits.py  llm.py  rating.py  scheduler.py  text_cleanup.py  url_fetch.py  user_time.py  vectorstore.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: robots.txt  sitemap.xml  theme-init.js
frontend/scripts/: check-selfhosted.mjs
frontend/src/: App.tsx  index.css  main.tsx  queryClient.ts
frontend/src/api/: client.ts  index.ts
frontend/src/components/: AuthPageShell.tsx  FlowDiagram.tsx  JobCard.tsx  JobDetailModal.tsx  LandingFooter.tsx  LimitContactModal.tsx  Logo.tsx  ManualJDModal.tsx  Modal.tsx  Navbar.tsx  ProgressBar.tsx  RatingProviderConfirmModal.tsx  RequestModelModal.tsx  Reveal.tsx  ScoreBadge.tsx  SetRatingModelModal.tsx  StarRating.tsx  StatTile.tsx  ThemeToggle.tsx  WelcomeModal.tsx
frontend/src/hooks/: useIsMobile.ts  useStores.ts
(+12 files in other folders)
